# zrive-ds

./: .cache.sqlite  .gitignore  Makefile  README.md  evol.py  orders.parquet  pyproject.toml  ssh-key  ssh-key.pub
module_1/: API_METEO_GET.IPYNB
src/: API_METEO.py  Homework1.py  __init__.py  practica1  service_metrics.txt
src/module_1/: API_METEO.py  Homework1.py  Madrid_meteo.html  Module1.ipynb  Module1.md  apart_1.ipynb  codigos_auxiliares.py  edu_explicacion.py  homework_module1.py  module_1_meteo_api.py  precipitation_sum_meteo.html  prueba_c.py  pruebas.ipynb  schema.json  soil_moisture_0_to_10cm_mean_meteo.html  temperature_2m_mean_meteo.html  test_meteo2.py
src/module_2/: .gitattributes  EDA_1.ipynb  EDA_part 1.ipynb  Module2.ipynb  Module2.md  Module2_Segunda_parte.ipynb  Module2_Segunda_parte.md  Module_2_EDA_Ex1.ipynb  Module_2_EDA_Ex1.md  Module_2_EDA_Ex2.ipynb  Module_2_EDA_Ex2.md  Module_3_project.ipynb  apart_1.ipynb  apart_1.md  apart_2.ipynb  apart_2.md  assesment_2.ipynb  assesment_2.md  codigo_edu  data_analysis  database_module_2  database_module_2_2  doc.txt  eda_groceries.md  eda_groceries_2.ipynb  eda_groceries_2.md  explicacion_data_analysis.ipynb  explicacion_data_analysis.md  inventory_analysis  module_2_EDA.ipynb  module_2_EDA.md  module_2_EDA.py  module_2_Understanding  module_2_eda.ipynb  module_2_eda.md  module_2_eda.py  testing file.py  undertanding_problem_space.ipynb
src/module_3/: Module_3_project.ipynb  eda_guille.ipynb  exploration.ipynb  exploration_modeling.ipynb  exploration_modeling.md  (+8 more)
zrive-ds-project/: pyproject.toml
(+33 files in other folders)
