[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"

requests = "^2.31.0"
black = {extras = ["jupyter"], version = "^24.10.0"}
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
scikit-learn = "^1.4.1.post1"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
boto3 = "^1.35.32"
seaborn = "^0.13.2"
plotly = "^5.24.1"
jupyter-black = "^0.4.0"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88